src/main.css
@import "./buttons.css";

* {
  box-sizing: border-box;
}

body {
  background: #eaedf1;
  font-family: "Lato", sans-serif;
  font-size: 22px;
  margin: 0;
}

pre {
  background-color: #f0f0f0;
  border-radius: 6px;
  font-size: 13px;
  margin-top: 0;
  padding: 1em;
}

.icon {
  margin-right: 0.75em;
}

.hud {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 640px;
  height: 90px;
  padding: 0.5em 1em;
  display: flex;
  justify-content: space-between;
  align-items: center;

  background-color: #7fccde;
  border-top-right-radius: 6px;
  box-shadow: 0 0 0 1px #7fccde inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset,
    0 8px 0 0 rgba(102, 164, 178, 0.6), 0 8px 0 1px rgba(0, 0, 0, 0.4),
    0 8px 8px 1px rgba(0, 0, 0, 0.5);
  color: white;
  user-select: none;
}

.hud.editMode {
  width: 900px;
}

.levelCodeModalBackdrop.open {
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.8);
  pointer-events: auto;
}
.levelCodeModalBackdrop {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  transition: background 150ms;
  pointer-events: none;
}

.levelCodeModal {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  min-width: 30em;
  max-height: 90%;
  padding: 20px;

  background-color: white;
  border-radius: 6px;
}

.levelCodeModal pre {
  overflow: auto;
  width: 100%;
}

.statusContainer {
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-evenly;
}

